<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ConditionTracker!</string>
    <string name="app_name">DnD Combat Assistant</string>
    <string name="heal_activity_directions">Enter the amount of hit points to regain:</string>
    <string name="apply_healing_now_button_text">Click to Apply Healing</string>
    <string name="damage_activity_directions">Enter the amount of damage:</string>
    <string name="damage_button_text">Click to Apply Damage</string>
    <string name="damage_activity_lose_surge_checkbox_text">And lose</string>
    <string name="leave_blank_for_maximum">Blank for max</string>
    <string name="maximum_hit_points">Max Hit Points</string>
    <string name="leave_blank_for_1_4_of_maximum">Blank for 1/4 max</string>
    <string name="surge_value">Surge Value</string>
    <string name="maximum_number_of_surges">Max Number of Surges</string>
    <string name="leave_blank_for_maximum_number">Blank for max</string>
    <string name="done">Click to Save Settings</string>
    <string name="add_bad_condition">+ Bad</string>
    <string name="add_good_condition">+ Good</string>
    <string name="add_condition">Click to Add Condition</string>
    <string name="ongoing_damage">Ongoing Damage</string>
    <string name="dazed">Dazed</string>
    <string name="stunned">Stunned</string>
    <string name="marked">Marked</string>
    <string name="slowed">Slowed</string>
    <string name="immobilized">Immobilized</string>
    <string name="restrained">Restrained</string>
    <string name="dominated">Dominated</string>
    <string name="weakened">Weakened</string>
    <string name="blinded">Blinded</string>
    <string name="helpless">Helpless</string>
    <string name="petrified">Petrified</string>
    <string name="unconscious">Unconscious</string>
    <string name="prone">Prone</string>
    <string name="penalty">Penalty</string>
    <string name="something">What is Affected?</string>
    <string name="to">to</string>
    <string name="penalty_of_">Penalty: </string>
    <string name="condition_ends_on_">Condition Ends On:</string>
    <string name="required">Required</string>
    <string name="number_of_surges">Number of Surges</string>
    <string name="bonus_to_what_">Bonus To What?</string>
    <string name="bonus_of">Bonus:</string>
    <string name="resist">Resist</string>
    <string name="amount">amount</string>
    <string name="damage_type">Damage Type</string>
    <string name="result_">Result:</string>
    <string name="quick_d20">Quick d20</string>
    <string name="number">Number</string>
    <string name="type">Type</string>
    <string name="static_mod">Static</string>
    <string name="grabbed">Grabbed</string>
    <string name="mod_bonus_by">Add Text to Bonus:</string>
    <string name="bonus_mod_by_hint">vs dragon</string>
    <string name="dice_roller_help">The basic expression looks like 2d8+15. You can have multiple types of dice: 2d8+3d6+15.\n\nIf any of the dice are rerollable (like brutal weapon dice), then use the reroll(r) button to get an expression like: 3d12r2+4d6+12. This expression will reroll the d12s if they are 2 or lower, but not the d6s.\n\nYou can also specify a high crit range (only on d20s) using the crit(c) button: 1d20c18 will notify you of crits on rolls of 18 or higher.\n\nYou can\'t put the reroll modifier on d20s and you can\'t put the crit modifier on non-d20s.</string>
    <string name="view_history">View History</string>
    <string name="action_pt_reminder">Action Point Reminder</string>
    <string name="enter_optional_reminder_of_action_point_features">Enter an optional reminder of action point features and feats</string>
    <string name="custom">Custom</string>
    <string name="enter_custom_condition">Enter custom condition</string>
    <string name="first_app_use_help">Welcome to the Condition Tracker. The first thing that you will want to do is use the \'Add Character\' menu option to enter the basic information for your first character. Data does get saved automatically between sessions. Use taps and long-presses to interact with the onscreen widgets; tapping the HP minus graphic will cause you to lose 1 hit point, but a long-press will allow you to enter massive amounts of damage. Gee, that sounds like fun...DM, do your worst!</string>
    <string name="first_dice_roller_use_help">Welcome to the dice roller. You can create typical expressions like 1d8+1d6+12 and even give these expressions names. Two expressions have been created for you. Use the \'Edit\' button to modify these expressions or to create new ones in the space provided. These expressions will be saved for later sessions. Use the \'Roll\' button to do the obvious. Finally, the \'Max\' button will give you the option to maximize the expression and optionally enter bonus damage in the same form (like 3d6). There is also a \'History\' if you need to check your last 20 or so rolls. You can read more about advanced options like creating expressions with rerolls and bigger crit ranges from the \'Dice Roller Help\' option in the menu.</string>
    <string name="how_many_temporary_hit_points_">Recall that temporary hit points do not stack.</string>
    <string name="buffer_me_up">Click to Add Temp HPs</string>
    <string name="within">when within</string>
    <string name="_5_squares_of_or_sight_of">sight of warlord</string>
    <string name="create_new_note">Click to Create a New Note</string>
    <string name="click_to_save_note">Click to Save Note</string>
    <string name="title_required_">Title of Note (required):</string>
    <string name="body_of_note_">Body of Note:</string>
    <string name="character_name">Character Name</string>
    <string name="enter_optional_character_name">Required</string>
    <string name="power_points">Power Points</string>
    <string name="optional_number">optional number</string>
</resources>
