<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:background="@drawable/background_test"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


	//don't scroll the button or condition ends spinner
	<Button
	   	android:text="@string/add_condition" 
	   	android:id="@+id/add_bad_condition_activity_button" 
	   	android:gravity="center"
	   	android:layout_width="fill_parent" 
	   	android:layout_height="50dip"
	   	android:textSize="20sp"
	   	android:paddingLeft="50dip"
	   	android:paddingRight="50dip">
   	</Button>
	   	
	   	
	<LinearLayout
		android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
		<TextView
			android:id="@+id/texter"
			android:text="Until: "
			style="@style/TextSerif.Black"></TextView>
		<Spinner 
			android:id="@+id/add_bad_condition_how_condition_ends"
			android:prompt="@string/condition_ends_on_"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"></Spinner>
	</LinearLayout>
	   	
	   	
	<ScrollView 
		android:id="@+id/addBadConditionScrollView"
		android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	//the scrollview's child
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
		
		<LinearLayout
			android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
				<CheckBox 
			    	style="@style/TextSerif.Black"
			    	android:text="@string/penalty_of_" 
			    	android:id="@+id/add_bad_penalty_checkbox" ></CheckBox>
				
				<Spinner
					android:id="@+id/add_bad_condition_spinner_penalty_value"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:drawSelectorOnTop="true"	        
		        	android:prompt="@string/penalty"					
				/>

				<TextView 
					android:id="@+id/textView1" 
			    	style="@style/TextSerif.Black"
			    	android:text="@string/to"
				/>
				<Spinner
					android:id="@+id/add_bad_condition_spinner_penalty_to_what"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:drawSelectorOnTop="true"	        
		        	android:prompt="@string/something"
				/>
		</LinearLayout>
		<TableLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent" >
		   	<TableRow>
				<CheckBox 
			    	style="@style/TextSerif.Black" 
			    	android:text="@string/ongoing_damage" 
			    	android:id="@+id/add_bad_ongoing_check"></CheckBox>
			    <EditText
			    	android:layout_width="wrap_content" 
			    	android:hint="Amount and type" 
			    	android:id="@+id/add_bad_ongoing_edit" 
			    	android:imeOptions="actionDone|flagNoExtractUi"	    	
					android:windowSoftInputMode="stateHidden" 
			    	android:layout_height="wrap_content"></EditText>
			</TableRow>
		    <TableRow>
			    <CheckBox 
			    	style="@style/TextSerif.Black" 
			    	android:text="@string/dazed" 
			    	android:id="@+id/add_bad_dazed" ></CheckBox>
			    <CheckBox 
			    	style="@style/TextSerif.Black"
			    	android:text="@string/stunned" 
			    	android:id="@+id/add_bad_stunned" ></CheckBox>
			</TableRow>
			<TableRow>
			    <CheckBox 
			    	style="@style/TextSerif.Black"
			    	android:text="@string/marked" 
			    	android:id="@+id/add_bad_marked" ></CheckBox>
			    <CheckBox 
			    	style="@style/TextSerif.Black"
			    	android:text="@string/slowed" 
			    	android:id="@+id/add_bad_slowed" ></CheckBox>
			</TableRow>
			<TableRow>
			    <CheckBox 
			    	style="@style/TextSerif.Black" 
			    	android:text="@string/immobilized" 
			    	android:id="@+id/add_bad_immobilized"></CheckBox>
			    <CheckBox 
			    	style="@style/TextSerif.Black" 
			    	android:text="@string/restrained" 
			    	android:id="@+id/add_bad_restrained"></CheckBox>
			</TableRow>
			
			<TableRow>
			    <CheckBox 
			    	style="@style/TextSerif.Black"
			    	android:text="@string/dominated" 
			    	android:id="@+id/add_bad_dominated"></CheckBox>
				<CheckBox 
			    	style="@style/TextSerif.Black" 
			    	android:text="@string/weakened" 
			    	android:id="@+id/add_bad_weakened"></CheckBox>
			</TableRow>
			<TableRow>
			    <CheckBox 
			    	style="@style/TextSerif.Black"
			    	android:text="@string/blinded" 
			    	android:id="@+id/add_bad_blinded"></CheckBox>
			    <CheckBox 
			    	style="@style/TextSerif.Black" 
			    	android:text="@string/helpless" 
			    	android:id="@+id/add_bad_helpless"></CheckBox>
			</TableRow>
			<TableRow>
			    <CheckBox 
			    	style="@style/TextSerif.Black"
			    	android:text="@string/prone" 
			    	android:id="@+id/add_bad_prone" ></CheckBox>
			    <CheckBox 
			    	style="@style/TextSerif.Black" 
			    	android:text="@string/grabbed" 
			    	android:id="@+id/add_bad_grabbed" ></CheckBox>
			</TableRow>
			<TableRow>
			    <CheckBox 
			    	style="@style/TextSerif.Black" 
			    	android:text="@string/petrified" 
			    	android:id="@+id/add_bad_petrified"></CheckBox>
			    <CheckBox 
			    	style="@style/TextSerif.Black"
			    	android:text="@string/unconscious" 
			    	android:id="@+id/add_bad_unconscious"></CheckBox>
			</TableRow>
			
		
		</TableLayout>
		
	//end of scrollview's child
	</LinearLayout>
	</ScrollView>
</LinearLayout>